deployment/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: backend-api
  namespace: study-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: fet.backend.service.com
    http:
      paths:
      - backend:
          service:
            name: temp-service
            port:
              number: 80
        path: /virtualPath(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: category-service
            port:
              number: 80
        path: /category-api(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - fet.backend.service.com
    secretName: ca-secret
